<resources>
    <string name="app_name">ColorPhone</string>
    <string name="customer">Customize</string>
    <string name="playlist_source">FROM “PLAYLISTS”</string>
    <string name="playlist_title">Lofi Loft</string>
    <string name="playlist_subtitle">soft, chill, dreamy, lo-fi beats</string>
    <string name="track_grainy_days">grainy days</string>
    <string name="track_coffee">Coffee</string>
    <string name="track_raindrops">raindrops</string>
    <string name="track_tokyo">Tokyo</string>
    <string name="track_lullaby">Lullaby</string>
    <string name="track_hazel_eyes">Hazel Eyes</string>
    <string name="artist_moody">moody.</string>
    <string name="artist_kainbeats">Kainbeats</string>
    <string name="artist_rainyyxx">rainyyxx</string>
    <string name="artist_smyang">SmYang</string>
    <string name="artist_iamfinenow">iamfinenow</string>
    <string name="nav_home">Home</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_library">Library</string>
    <string name="content_back">Back</string>
    <string name="content_more">More options</string>
    <string name="content_playlist_cover">Playlist cover</string>
    <string name="content_home">Home</string>
    <string name="content_explore">Explore</string>
    <string name="content_library">Library</string>
    <string name="song_playing_from_playlist">PLAYING FROM PLAYLIST:</string>
    <string name="song_album_title">Lofi Loft</string>
    <string name="song_title">grainy days</string>
    <string name="song_artist">moody.</string>
    <string name="song_current_time">0:00</string>
    <string name="song_total_time">2:43</string>
    <string name="lyrics_title">LYRICS</string>
    <string name="lyrics_line_1">You never look at the sky</string>
    <string name="lyrics_line_2">Cause you think it&#39;s too high</string>
    <string name="lyrics_line_3">You never look at the stars</string>
    <string name="lyrics_line_4">Cause you think they&#39;re too far</string>
    <string name="lyrics_line_5">But they&#39;re showing the lights to the way back home</string>
    <string name="lyrics_line_6">When you don&#39;t know where to go</string>
    <string name="content_song_cover">Song cover</string>
    <string name="content_share">Share</string>
    <string name="content_favorite">Favorite</string>
    <string name="content_shuffle">Shuffle</string>
    <string name="content_previous">Previous</string>
    <string name="content_play">Play</string>
    <string name="content_next">Next</string>
    <string name="content_equalizer">Equalizer</string>
    <string name="content_add">Add</string>
    <string name="content_download">Download</string>
    <string name="menu_add_to_playlist">Add to playlist</string>
    <string name="menu_add_to_queue">Add to queue</string>
    <string name="menu_remove_from_playlist">Remove from playlist</string>
    <string name="menu_modify_tags">Modify tags</string>
    <string name="menu_view_artist">View Artist</string>
    <string name="menu_view_album">View Album</string>
    <string name="menu_show_credits">Show Credits</string>
    <string name="menu_share">Share</string>
    <string name="menu_generate_qr_code">Generate QR Code</string>
    <string name="menu_sleep_timer">Sleep Timer</string>
    <string name="menu_hide_song">Hide song</string>
    <string name="menu_go_to_song_radio">Go to Song Radio</string>
    <string name="content_menu_add">Add</string>
    <string name="content_menu_qr">QR code</string>
    <string name="content_menu_sleep">Sleep timer</string>
    <string name="content_menu_hide">Hide song</string>
    <string name="content_menu_radio">Song radio</string>
    <string name="sleep_timer_title">Stop audio in</string>
    <string name="sleep_timer_end_of_track">End of Track</string>
    <string name="sleep_timer_60_seconds">60 seconds</string>
    <string name="sleep_timer_5_minutes">5 minutes</string>
    <string name="sleep_timer_10_minutes">10 minutes</string>
    <string name="sleep_timer_15_minutes">15 minutes</string>
    <string name="sleep_timer_30_minutes">30 minutes</string>
    <string name="sleep_timer_1_hour">1 hour</string>
</resources>
