<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_playlist_screen"
    tools:context=".ui.menu.MenuFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:paddingBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="34dp"
            android:paddingEnd="20dp">

            <ImageView
                android:id="@+id/ivFavorite"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/content_favorite"
                android:src="@drawable/ic_heart_outline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivAdd"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/content_menu_add"
                android:src="@drawable/ic_add_outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/menuCover"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_song_cover"
                android:contentDescription="@string/content_song_cover"
                app:layout_constraintDimensionRatio="156:158"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivFavorite"
                app:layout_constraintWidth_percent="0.56" />

            <TextView
                android:id="@+id/tvSongTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/song_title"
                android:textColor="@color/text_primary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/menuCover" />

            <TextView
                android:id="@+id/tvSongArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/sans_regular"
                android:text="@string/song_artist"
                android:textColor="@color/text_secondary"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSongTitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSongArtist"
                tools:itemCount="13"
                tools:listitem="@layout/item_menu" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
